# Roomba696ROS2Brain

./: platformio.ini
install/: local_setup.sh  setup.sh
install/create_msgs/share/create_msgs/: package.dsv  package.sh
install/create_msgs/share/create_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  create_msgs__rosidl_typesupport_cppExport-noconfig.cmake  create_msgs__rosidl_typesupport_cppExport.cmake  create_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  create_msgs__rosidl_typesupport_introspection_cExport.cmake  create_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_create_msgs__rosidl_generator_pyExport.cmake  export_create_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake
install/create_msgs/share/create_msgs/msg/: ChargingState.json  Mode.json  MotorSetpoint.json
install/create_msgs/share/create_msgs/rust/: Cargo.toml
install/create_msgs/share/create_msgs/rust/src/: msg.rs
log/: latest_build
src/: main.cpp  main.cppBasicTest  main.cppBlindBridge  main.cppTEST  main.cpp_tesrv2  secrets.h
src/Client/: RoombaAutoLogic.py  RoombaBumpMapper.py  RoombaPS3JoyTeleop.py
src/Client/old/: Roomba696PureROS2Teleop.py  Roomba696PureROS2TeleopV1.py  Roomba696PureROS2TeleopV2.py  Roomba696PureROS2TeleopV3.py  Roomba696PureROS2TeleopV4.py  Roomba696PureROS2TeleopV5.py  RoombaPS3JoySteering.py
src/ESP32Old/: main.cppBasicTest  main.cppPatient  main.cppTEST  main.cppV12  main.cppV13  main.cppV14  main.cppV16  main.cpp_StreamDisable
src/Server/: ttyUSBPythonV1.py
(+45 files in other folders)
