[package]
name = "create_msgs"
version = "3.1.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.5"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }
std_msgs = "*"
builtin_interfaces = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'std_msgs/serde', 'builtin_interfaces/serde']
